<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">卡先生</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="card_bag">我的卡包</string>
	
	<string name="coupon">优惠信息</string>
	<string name="mine">个人中心</string>
	<string name="integral">积分</string>
	<string name="add_card">添加会员卡</string>
	<string name="exit">退出</string>
	<string name="confirm">确定</string>
	<string name="cencle">取消</string>
	<string name="exit_messge">确定退出？</string>
	<string name="finish">完成</string>
	<string name="card_name">卡片名称</string>
	<string name="input_cardname">请输入卡片名称</string>
	<string name="cardno">卡号</string>
	<string name="input_cardno">请输入卡号</string>
	<string name="verso">反面</string>
	<string name="front">正面</string>
	<string name="had_card">添加已有会员卡</string>
	<string name="free_card">免费领取会员卡</string>
	<string name="save">保存</string>
	<string name="get">获取</string>
	<string name="search">商家搜索</string>
	<string name="login">登录</string>
	<string name="activity_details">活动详情</string>
	<string name="setpwd">设置密码</string>
	<string name="newscenter">消息中心</string>
	<string name="register">注册</string>
	<string name="findpwd">密码找回</string>
	<string name="nickname">昵称：</string>
	<string name="ID">ID：</string>
	<string name="edit_personal">个人信息编辑</string>
	<string name="edit_sex">性别</string>
	<string name="edit_email">邮箱</string>
	<string name="edit_nicakname">昵称</string>
	<string name="edit_name">姓名</string>
	<string name="edit_birthday">生日</string>
	<string name="man">男</string>
	<string name="woman">女</string>
	<string name="go">可点击</string>
	<string name="toreg">没有账号？点击注册</string>
	<string name="mycoupon">我的优惠券</string>
	<string name="input_phoneno">请输入手机号</string>
	<string name="input_pwd">请输入密码</string>
	<string name="forget_pwd">忘记密码？</string>
	<string name="readandagree">我已阅读并同意</string>
	<string name="mr_card_reg_deal">卡先生用户注册协议</string>
	<string name="input_auth_code">请输入验证码</string>
	<string name="get_auth_code">获取验证码</string>
	<string name="input_pwd_again">请再次输入密码</string>
	<string name="consumption_record">消费记录</string>
	<string name="nodown">未连接</string>
	<string name="no_message">无消息</string>
	<string-array name="mine_lable_array">
	    <item >优惠券</item>
	    <item >消息中心</item>
	    <item >意见反馈</item>
	    <item >关于</item>
	</string-array>
	<string-array 
	    name="vipintroduce_lable_array"
	    >
	    <item >卡号</item>
	    <item >折扣编码</item>
	    <item >会员余额</item>
	    <item >会员积分</item>
	</string-array>
	<string name="feedback">意见反馈</string>
	<string name="aboutus">关于我们</string>
	<string name="softversion">软件版本</string>
	<string name="service_tel">客服电话</string>
	<string name="official_website">官方网址</string>
</resources>
