<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background"
     >
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        android:text="@string/card_name"
	        android:textColor="#333"
	        android:textSize="18sp"
	        android:gravity="center_vertical"
	        />
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        android:background="@drawable/edittext_bg"
	        android:hint="@string/input_cardname"
	        android:gravity="center_vertical"
	        android:paddingLeft="10dp"
	        android:textSize="13sp"
	        />
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        android:text="@string/cardno"
	        android:textColor="#333"
	        android:textSize="18sp"
	        android:gravity="center_vertical"
	        />
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1.1"
	        android:orientation="horizontal"
	        >
	        <EditText 
	            android:id="@+id/card_no"
		        android:layout_width="0dip"
		        android:layout_height="match_parent"
		        android:layout_weight="6"
		        android:background="@drawable/edittext_bg"
		        android:hint="@string/input_cardno"
		        android:gravity="center_vertical"
		        android:paddingLeft="10dp"
		        android:textSize="13sp"
	        />
	        <Button 
	            android:id="@+id/card_btn"
	            android:layout_width="0dip"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:text="@string/cardno"
	            android:background="@drawable/btn_bg"
	            android:textColor="#fff"
	            android:textSize="15sp"
	            />
	    </LinearLayout>
	    <ImageView 
	        android:id="@+id/take_front"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="3"
	        android:layout_marginRight="40dp"
	        android:layout_marginLeft="40dp"
	        android:layout_marginTop="20dp"
	        android:background="@drawable/take_photo"
	        />
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        android:text="@string/front"
	        android:textColor="#333"
	        android:textSize="18sp"
	        android:gravity="center"
	        />
	    <ImageView 
	        android:id="@+id/take_verso"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="3"
	        android:layout_marginRight="40dp"
	        android:layout_marginLeft="40dp"
	        android:background="@drawable/take_photo"
	        />
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        android:text="@string/verso"
	        android:textColor="#333"
	        android:textSize="18sp"
	        android:gravity="center"
	        />
	    <Button 
	        android:layout_width="80dp"
	        android:layout_height="0dip"
	        android:layout_weight="1"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/save"
	        android:textColor="@color/white"
	        android:background="@drawable/btn_bg2"
	        />
</LinearLayout>
