<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
     >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/title_bg"
        >
        <ImageView
        	    android:id="@+id/find_back"
        	    android:layout_width="20dp"
        	    android:layout_height="20dp"
        	    android:src="@drawable/back"
        	    android:layout_alignParentLeft="true"
        	    android:layout_centerVertical="true"
        	    android:layout_marginLeft="20dp"
        	    android:contentDescription="@string/go"
        	    />
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/findpwd"
        android:layout_centerInParent="true"
        />
    </RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="@drawable/search_bg"
	    android:layout_marginTop="50dp"
	    android:layout_marginBottom="15dp"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    android:orientation="horizontal"
	    >
	    <EditText 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="5"
	        android:background="@null"
	        android:hint="@string/input_phoneno"
	        android:textSize="13sp"
	        android:gravity="center_vertical"
	        android:paddingLeft="10dp"
	        android:inputType="phone"
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="@drawable/search_bg"
	    android:layout_marginTop="15dp"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    >
	    <EditText 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="3.5"
	        android:background="@null"
	        android:hint="@string/input_auth_code"
	        android:textSize="13sp"
	        android:gravity="center_vertical"
	        android:paddingLeft="10dp"
	        />
	    <ImageView 
	        android:layout_width="1px"
	        android:layout_height="match_parent"
	        android:src="@drawable/vertical_line"
	        />
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1.5"
	        android:textSize="12sp"
	        android:textColor="@color/reg"
	        android:text="@string/get_auth_code"
	        android:gravity="center"
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="8"
	    android:orientation="vertical"
	    android:paddingLeft="30dp"
	    android:paddingRight="30dp"
	    android:gravity="center_horizontal"
	    >
	    <Button 
	        android:id="@+id/find_comfirm"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginLeft="50dp"
	        android:layout_marginRight="50dp"
	        android:layout_marginTop="30dp"
	        android:background="@drawable/btn_bg2"
	        android:textColor="@color/white"
	        android:textSize="20sp"
	        android:text="@string/confirm"
	        />
	</LinearLayout>
</LinearLayout>
