<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/background"
    >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/title_bg"
        >
        <ImageView
        	    android:id="@+id/login_back"
        	    android:layout_width="20dp"
        	    android:layout_height="20dp"
        	    android:src="@drawable/back"
        	    android:layout_alignParentLeft="true"
        	    android:layout_centerVertical="true"
        	    android:layout_marginLeft="20dp"
        	    android:contentDescription="@string/go"
        	    />
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/login"
        android:layout_centerInParent="true"
        />
    </RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="@drawable/search_bg"
	    android:layout_marginTop="50dp"
	    android:layout_marginBottom="15dp"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    android:orientation="horizontal"
	    >
	    <ImageView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:src="@drawable/user_icon"
	        android:padding="8dp"
	        />
	    <EditText 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="5"
	        android:background="@null"
	        android:hint="@string/input_phoneno"
	        android:textSize="13sp"
	        android:gravity="center_vertical"
	        android:inputType="phone"
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:background="@drawable/search_bg"
	    android:layout_marginTop="15dp"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    >
	    <ImageView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:src="@drawable/pwd_icon"
	        android:padding="8dp"
	        />
	    <EditText 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="3.5"
	        android:background="@null"
	        android:hint="@string/input_pwd"
	        android:textSize="13sp"
	        android:gravity="center_vertical"
	        android:inputType="textPassword"
	        />
	    <TextView 
	        android:id="@+id/to_find"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1.5"
	        android:textSize="12sp"
	        android:textColor="@color/reg"
	        android:text="@string/forget_pwd"
	        android:gravity="center"
	        />
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="8"
	    android:orientation="vertical"
	    android:padding="30dp"
	    android:gravity="center_horizontal"
	    >
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginLeft="50dp"
	        android:layout_marginRight="50dp"
	        android:background="@drawable/btn_bg2"
	        android:textColor="@color/white"
	        android:textSize="20sp"
	        android:text="@string/login"
	        />
	    <TextView 
	        android:id="@+id/to_reg"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/reg"
	        android:textSize="12sp"
	        android:text="@string/toreg"
	        android:layout_marginTop="15dp"
	        />
	</LinearLayout>
</LinearLayout>
