<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/title_bg"
        >
        <TextView 
            android:id="@+id/edit_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cencle"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            />
        <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/edit_personal"
        />
    </RelativeLayout>
    
	 <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2.8"
	    android:background="@color/mine_bg"
	    >
	    <ImageView
	        android:id="@+id/edit_icon"
	        android:layout_width="80dp"
	        android:layout_height="80dp"
	        android:background="@drawable/mine_icon"
	        android:layout_centerInParent="true"
	        android:contentDescription="@string/go"
	        />
	</RelativeLayout>
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="8"   
		android:orientation="vertical" 
			>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp" 
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:background="@color/background"
	        >
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:textColor="#666"
	            android:textSize="15sp"
	            android:text="@string/ID"
	            />
	        <EditText 
	            android:id="@+id/edit_text1"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="2"
	            android:background="@null"
	            android:gravity="center_vertical"
	            android:textColor="#666"
	            android:textSize="15sp"
	            android:singleLine="true"
	            android:inputType="none"
	            android:editable="false"
	            />
	    </LinearLayout>
	    <include layout="@layout/line"/>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp" 
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:background="@color/background"
	        >

	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/edit_nicakname"
	            android:textColor="#666"
	            android:textSize="15sp" />

	        <EditText
	            android:id="@+id/edit_text2"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="2"
	            android:background="@null"
	            android:gravity="center_vertical"
	            android:textColor="#666"
	            android:textSize="15sp"
	            android:singleLine="true"
	            android:inputType="textPersonName"
	            />
	    </LinearLayout>
	    <include layout="@layout/line"/>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp" 
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:background="@color/background"
	        >

	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/edit_name"
	            android:textColor="#666"
	            android:textSize="15sp" />

	        <EditText
	            android:id="@+id/edit_text3"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="2"
	            android:background="@null"
	            android:gravity="center_vertical"
	            android:textColor="#666"
	            android:textSize="15sp"
	            android:singleLine="true"
	            android:inputType="textPersonName"
	            />
	    </LinearLayout>
	    <include layout="@layout/line"/>
	    <LinearLayout
	        android:id="@+id/edit_birthday"
	        android:layout_width="match_parent"
	        android:layout_height="0dp" 
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:gravity="center_vertical"
	        android:background="@color/background"
	        android:paddingRight="10dp"
	        >

	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/edit_birthday"
	            android:textColor="#666"
	            android:textSize="15sp"
	            android:layout_marginLeft="5dp"
	             />

	        <TextView
	            android:id="@+id/edit_text4"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="2"
	            android:gravity="center_vertical"
	            android:textColor="#666"
	            android:textSize="15sp"
	            android:singleLine="true"
	            android:layout_marginLeft="5dp"
	            />
	        <ImageView 
	            android:layout_width="20dp"
	            android:layout_height="15dp"
	            android:src="@drawable/go"
	            android:contentDescription="@string/go"
	            />
	    </LinearLayout>
	    <include layout="@layout/line"/>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp" 
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:background="@color/background"
	        >
	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/edit_sex"
	            android:textColor="#666"
	            android:textSize="15sp" />

	        <LinearLayout 
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="2"
	            android:background="@color/background"
	            android:orientation="horizontal"
	            android:gravity="center_vertical"
	            >

	            <CheckBox
	                android:id="@+id/edit_manbox"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical|end"
	                android:text="@string/man" 
	                style="@style/sexchoose"
	                android:checked="true"
	                android:layout_marginRight="20dp"
	                />
				<CheckBox
				    android:id="@+id/edit_womanbox"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical|end"
	                android:text="@string/woman" 
	                style="@style/sexchoose"
	                android:checked="false"
	                />
	        </LinearLayout>
	    </LinearLayout>
	    <include layout="@layout/line"/>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp" 
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:background="@color/background"
	        >

	        <TextView
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:text="@string/edit_email"
	            android:textColor="#666"
	            android:textSize="15sp" />

	        <EditText
	            android:id="@+id/edit_text5"
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="2"
	            android:gravity="center_vertical"
	            android:textColor="#666"
	            android:textSize="15sp"
	            android:singleLine="true"
	            android:background="@null"
	            android:inputType="textEmailAddress"
	            />
	    </LinearLayout>
	    <include layout="@layout/line"/>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp" 
	        android:layout_weight="3"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:background="@color/background"
	        >
	        <Button 
	            android:id="@+id/edit_save"
	            android:layout_width="80dp"
	            android:layout_height="40dp"
	            android:background="@drawable/btn_bg2"
	            android:textColor="@color/white"
	            android:text="@string/save"
	            />
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>
