<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/title_bg"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_card"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="18sp"
            />
    </RelativeLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="11"
	    android:padding="50dp"
	    >
        <Button 
            android:id="@+id/had_card"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_bg2"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/had_card"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            />
        <Button 
            android:id="@+id/free_card"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_bg2"
            android:text="@string/free_card"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/had_card"
            />
	</RelativeLayout>
</LinearLayout>
