<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
     >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/title_bg"
        >
        <ImageView
        	    android:id="@+id/vip_introduce_back"
        	    android:layout_width="20dp"
        	    android:layout_height="20dp"
        	    android:src="@drawable/back"
        	    android:layout_alignParentLeft="true"
        	    android:layout_centerVertical="true"
        	    android:layout_marginLeft="20dp"
        	    android:contentDescription="@string/go"
        	    />
        <TextView 
        android:id="@+id/vip_introduce_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/setpwd"
        android:layout_centerInParent="true"
        />
    </RelativeLayout>
	<ImageView
	    android:id="@+id/vip_introduce_icon"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1.2"
	    android:background="@drawable/long_icon_dickos"
	    />
	<android.support.v4.view.ViewPager
	    android:id="@+id/vip_introduce_card"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2"
	    android:layout_marginLeft="80dp"
	    android:layout_marginRight="80dp"
	    />
	<include 
	    android:layout_width="match_parent"
	    layout="@layout/line"
	    android:paddingLeft="20dp"
	    />
	<ListView 
	    android:id="@+id/vip_introduce_content"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="3.5"
	    android:divider="@null"
	    ></ListView>
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:textSize="18sp"
	    android:textColor="@color/gray_text"
	    android:text="@string/coupon"
	    />
	<ListView 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1.5"
	    ></ListView>
	<include 
	    layout="@layout/line"
	    />
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:gravity="center"
	    android:textSize="18sp"
	    android:textColor="@color/gray_text"
	    android:text="@string/consumption_record"
	    />
	<ListView 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1.5"
	    ></ListView>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1.1"
	    android:background="#fff333"
	    ></LinearLayout>
</LinearLayout>
